--- a/samples/darksome.css
+++ b/samples/darksome.css
@@ -1,6 +1,6 @@
 /* Global styles */
 
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 :root {
   --primary-color: #333;
@@ -15,9 +15,82 @@
   --denary-color: #fff;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Inter', sans-serif;
+}
+
 body {
-  font-family: Arial, sans-serif;
-  background-color: var(septenary-color);
+  margin: 0 1rem;
+  padding: 0;
+  font-size: 1rem;
+  background-color: #f3f4f6;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+}
+
+img {
+  width: 100%;
+  height: 170px;
+  object-fit: cover;
+}
+
+figcaption {
+  font-size: 0.7rem;
+}
+
+nav ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+ol {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 5px;
+}
+
+ol li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  border: solid thin rgb(200, 200, 200);
+  border-radius: 5px;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 0.8rem;
+  cursor: pointer;
+}
+
+ol li:hover {
+  background-color: rgb(230, 230, 230);
+}
+
+ol li a {
+  text-decoration: none;
+  /* color: white; */
+}
+
+a {
+  text-decoration: none;
+  color: #0c5ebe;
+  font-weight: 500;
 }
 
 /* Header styles */
@@ -27,10 +100,44 @@ body {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-.header h1 {
-  color: #333;
+header {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  max-width: 700px;
+}
+
+header h1 {
+  color: #000;
   text-align: center;
   margin: 0;
+  padding: 0;
+  font-size: 1.5rem;
+  font-weight: 700;
+  line-height: 1.5;
+}
+
+h2 {
+  font-size: 1.3rem;
+  font-weight: 600;
+  line-height: 1.5;
+  margin: 20px 0 10px 0;
+}
+
+section {
+  margin-bottom: 10px;
+  padding: 0 1rem 2rem 1rem;
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  max-width: 700px;
+  border-radius: 0.25rem;
+}
+
+p {
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  margin: 10px 0 0 0;
 }
 
 .header nav {
@@ -51,7 +158,7 @@ body {
 
 .header nav a {
   text-decoration: none;
-  color: #333;
+  /* color: #333; */
 }
 
 .header nav a:hover {
@@ -94,14 +201,6 @@ body {
   padding: 0;
 }
 
-#services li {
-  margin-top: 10px;
-}
-
-#services li strong {
-  display: block;
-}
-
 /* Contact section styles */
 #contact {
   padding: 20px;
@@ -111,13 +210,13 @@ body {
   margin-top: 0;
 }
 
-#contact form label {
+form label {
   display: block;
   margin-bottom: 5px;
 }
 
-#contact form input,
-#contact form textarea {
+form input,
+form textarea {
   display: block;
   width: 100%;
   padding: 5px;
@@ -126,13 +225,13 @@ body {
   border-radius: 3px;
 }
 
-#contact form input:focus,
-#contact form textarea:focus {
+form input:focus,
+form textarea:focus {
   outline: none;
   border-color: #333;
 }
 
-#contact form button[type="submit"] {
+form button[type="submit"] {
   display: block;
   width: 100%;
   padding: 10px;
