Change Title bar, tabs, and vendor prefix color customizations.

--- a/samples/darksome.css
+++ b/samples/darksome.css
@@ -28,6 +28,8 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
+    --webkit-font-smoothing: antialiased;
+    --moz-osx-font-smoothing: grayscale;
 }
 
 img {
